<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.chinessy.chinessy.activity.TimeslotsActivity"
    android:orientation="vertical">

    <com.rey.material.widget.ProgressView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:pv_autostart="true"
        app:pv_circular="false"
        app:pv_progressStyle="@style/Material.Drawable.LinearProgress"
        app:pv_progressMode="indeterminate"
        app:lpd_verticalAlign="top"
        android:id="@+id/timeslots_pv_loading"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:id="@+id/timeslots_rl_time"
            android:background="@drawable/btn_long_white"
            android:layout_marginBottom="1dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_l"
                android:text="@string/Time"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_l"
                android:id="@+id/timeslots_tv_time"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="5dp"
            android:id="@+id/timeslots_rl_date"
            android:background="@drawable/btn_long_white"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_l"
                android:text="@string/Date"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_l"
                android:id="@+id/timeslots_tv_date"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Timeslots_to"
            android:layout_margin="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/AVOID"
            android:layout_margin="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            android:layout_margin="2dp"
            />

    </LinearLayout>
    
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeslots_lv_teacherupcoming"
        >

    </ListView>

</LinearLayout>
