<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_rl_navbar"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_alignParentBottom="true"
    android:background="#fff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/main_ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#fff"
                android:src="@mipmap/tabicon_home_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#ccc"
                android:text="@string/tab_home"
                android:id="@+id/main_tv_home"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_tutors"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_tutors"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#fff"
                android:src="@mipmap/tabicon_tutor_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#ccc"
                android:text="@string/tab_tutors"
                android:id="@+id/main_tv_tutors"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_reservation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_reservation"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#fff"
                android:src="@mipmap/tabicon_reservation_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#ccc"
                android:text="@string/tab_reservation"
                android:id="@+id/main_tv_reservation"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/main_iv_me"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="#fff"
                android:src="@mipmap/tabicon_me_off" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="#ccc"
                android:text="@string/tab_me"
                android:id="@+id/main_tv_me"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>