<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.chinessy.chinessy.activity.AddExtraMinutesActivity"
    android:background="@color/main_bg_gray"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addextraminutes_tv_hint"
        android:text="@string/add_extra_minutes_hint"
        android:textSize="@dimen/text_size_l"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/addextraminutes_ll_addextraminutes"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/btn_long_white"
                android:id="@+id/addextraminutes_rl_chooseamount"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_l"
                    android:text="@string/Choose_Amount"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/addextraminutes_tv_chooseamount"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/gray"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textSize="@dimen/text_size_l"
                    android:text="@string/Total"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addextraminutes_tv_originalprice"
                        android:layout_marginRight="10dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addextraminutes_tv_totalprice"
                        android:textColor="@color/red"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Promo_code"
                    android:layout_marginRight="3dp"
                    android:id="@+id/addextraminutes_tv_using"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:id="@+id/addextraminutes_tv_promotioncode"
                    android:visibility="gone"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_color"
                    android:text="@string/Have_a_promo_code"
                    android:id="@+id/addextraminutes_tv_addpromocode"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Buy"
                android:textColor="@color/main_color"
                android:background="@drawable/btn_long_white"
                android:layout_marginTop="15dp"
                android:id="@+id/addextraminutes_btn_buy"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_xl"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55ffffff"
            android:id="@+id/addextraminutes_ll_cover"
            android:visibility="gone">

        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:id="@+id/addextraminutes_pb_loadingextraproduct"
        />

</LinearLayout>
